--- a/cashregister.kv
+++ b/cashregister.kv
@@ -1,4 +1,13 @@
+MDRaisedButton:
+    markup: True
+
 <InventoryRow>:
+    canvas.after:
+        Color:
+            rgba: 0.5, 0.5, 0.5, 1
+        Line:
+            points: self.x, self.y, self.x + self.width, self.y
+            width: 1
     barcode: root.barcode
     name: root.name
     price: root.price
