--- a/cashregister.kv
+++ b/cashregister.kv
@@ -110,12 +110,25 @@
             orientation: 'vertical'
 
 <PrintQueueRow>:
+    canvas.after:
+        Color:
+            rgba: 0.5, 0.5, 0.5, 1
+        Line:
+            points: self.x, self.y, self.x + self.width, self.y
+            width: 1
     orientation: 'horizontal'
     #size_hint_y: None
     height: dp(48)
+    spacing: 5
 
     Label:
         text: root.name
+    Label:
+        text: root.optional_text
+        #size_hint_x: 1.5
+        #text_size: self.size
+        #halign: 'center'
+        #valign: 'middle'
     BoxLayout:
         orientation: 'horizontal'
         #size_hint_x: None
@@ -136,6 +149,10 @@
             #width: dp(48)
 
             on_press: root.increment_quantity()
+    MDRaisedButton:
+        text: "Add Text"
+        on_press: root.add_label_text()
+
     MDRaisedButton:
         text: "Remove"
         on_press: root.on_remove_button_press()
