--- a/cashregister.kv
+++ b/cashregister.kv
@@ -2,7 +2,8 @@
     markup: True
 <MarkupLabel>:
     markup: True
-
+<MarkupButton>:
+    markup: True
 <InventoryRow>:
     canvas.after:
         Color:
