--- a/cashregister.kv
+++ b/cashregister.kv
@@ -36,7 +36,7 @@
         height: '32dp'
         TextInput:
             id: label_search_input
-            size_hint_x: 0.8
+            size_hint: (0.8, 1)
             hint_text: 'Search'
             on_text: root.filter_inventory(self.text)
 
@@ -44,7 +44,7 @@
         id: rv
         viewclass: 'InventoryRow'
         RecycleBoxLayout:
-            default_size: None, dp(56)
+            default_size: None, dp(40)
             default_size_hint: 1, None
             size_hint_y: None
             height: self.minimum_height
@@ -85,7 +85,7 @@
         size_hint_y: None
         height: '48dp'
         orientation: 'horizontal'
-
+        spacing: 5
         TextInput:
             id: label_search_input
             size_hint_x: 0.8
@@ -93,11 +93,11 @@
             on_text: root.filter_inventory(self.text)
         MDRaisedButton:
             text: "Clear"
-            size_hint_x: 0.2
+            size_hint: (0.2,1)
             on_press: root.clear_search()
         MDRaisedButton:
             text: "Show Print Queue"
-            size_hint_x: 0.2
+            size_hint: (0.2,1)
             on_press: root.show_print_queue()
 
     RecycleView:
