--- a/cashregister.kv
+++ b/cashregister.kv
@@ -216,7 +216,7 @@
     Button:
         text: "Details"
         size_hint_x: 0.1
-        on_press: root.open_inventory_manager_row()
+        on_press: root.app.utilities.open_inventory_manager_row(root)
 
 <InventoryManagementView>:
     orientation: 'vertical'
