shrink add to order buttons

--- a/cashregister.kv
+++ b/cashregister.kv
@@ -33,7 +33,7 @@
     Button:
         text: "Add to Order"
         on_press: root.add_to_order()
-
+        size_hint_x: 0.2
 <InventoryView>:
     orientation: 'vertical'
 
