more dist structure

--- a/cashregister.kv
+++ b/cashregister.kv
@@ -352,7 +352,7 @@
     Button:
         size_hint_x: 0.1
         text: "Details"
-        on_press: root.history_view.display_order_details(root.order_id)
+        on_press: root.do_nothin()
 
 <DistView>:
     orientation: 'vertical'
