fix inventory search id

--- a/cashregister.kv
+++ b/cashregister.kv
@@ -43,7 +43,7 @@
         height: '32dp'
         spacing: 5
         TextInput:
-            id: label_search_input
+            id: inventory_search_input
             hint_text: 'Search'
             on_text: root.filter_inventory(self.text)
 
